--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -43,6 +43,7 @@ body{
     display: flex;
     justify-content: flex-end;
     width: 100%;
+    background:#fff;
     max-width: 1440px;
     height: 35px;
     margin: 0 auto;
@@ -1349,7 +1350,33 @@ img{
     vertical-align: middle;
     content: "";
 }
+.header{
+    margin-top: 65px;
+}
+.no-padding{
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+.header-top-sub{
+    position: fixed;
+    top: 0;
+}
+.header{
+    transition: all .3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    z-index: 999;
+}
+@media only screen and (min-width:  768px) {
+    .header {
+        margin-top: 26px;
+    }
+}
+.header-top-sub{
+    z-index:99;
+}
 @media only screen and (max-width:  768px) {
+    .header{
+        margin-top: 65px;
+    }
     #mobnav-btn {
         display: block;
     }
@@ -1507,6 +1534,7 @@ img{
     
     body {
       margin: 0;
+      overflow-x: hidden !important;
     }
     
     .layout {
@@ -1612,6 +1640,9 @@ img{
 
     background: #fff;
 
+}
+.header{
+    position: fixed;
 }
 .main-nav li.bt-child-menu a {
     display: flex;
